minor update to the documentation. break out OpenAM set up into it's own document